--- a/code/src/components/new-item.css
+++ b/code/src/components/new-item.css
@@ -3,45 +3,56 @@
 }
 
 .new-item-form {
-  background-color: #fde9e9;
+  background-color: #ffa647;
   display: flex;
   justify-content: center;
   margin: 20px 0px 0px 0px;
-  padding: 50px;
+  padding: 50px 20px;
   width: 100%;
 }
 
 .new-item-form input, .new-item-form button {
-  border: 2px solid #fbd3d3;
-  color: #6d6161;
-  height: 40px;
+  border: none;
+  color: #592e00;
+  font-size: 20px;
   vertical-align: middle
 }
 
 .new-item-form input {
-  background-color: #fde2e2;
-  border-radius: 20px 0px 0px 20px;
-  padding: 0px 20px;
-  width: 80%;
+  background-color: #ffa647;
+  border-bottom: 2px solid #c2711c;
+  border-radius: 0;
+  padding: 0px 10px;
+  margin-right: 25px;
+  width: 60%;
 }
 
 .new-item-form input::placeholder{
-  color: #a19999;
+  color: #c47a2b;
+  font-size: 20px;
 }
 
 .new-item-form button {
-  background-color: #fbd3d3;
-  border-radius: 0px 20px 20px 0px;
-  font-size: 20px;
-  width: 20%;
+  background-color: #c2711c;
+  border-radius: 100px;
+  height: 40px;
+  text-align: center;
+  padding: 0px;
+  line-height: 40px;
+  width: 40px;
+  max-width: 40px;
+}
+
+.new-item-form button:hover {
+  font-size: 23px;
 }
 
 @media (min-width: 600px) {
-  .new-item-form input {
-    width: 50%;
+  .new-item-form {
+    padding: 50px;
   }
-
-  .new-item-form button {
-    width: 10%;
+  .new-item-form input {
+    width: 30%;
+    height: 40px;
   }
 }
